...
                }

                Section("Cookbooks") {
                    Button {
                        activeSheet = .newPersonalCookbook
                    } label: {
                        Label("New Personal Cookbook", systemImage: "book.closed")
                    }
                    Button {
                        activeSheet = .newFamilyCookbook
                    } label: {
                        Label("New Community Cookbook", systemImage: "person.3")
                    }
...
